@@ -3,156 +3,130 @@ package com.hechang.codeagent.service.impl;
 import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.util.StrUtil;
-import com.hechang.codeagent.common.ResultUtils;
-import com.hechang.codeagent.constant.UserConstant;
+import com.mybatisflex.core.query.QueryWrapper;
+import com.mybatisflex.spring.service.impl.ServiceImpl;
 import com.hechang.codeagent.exception.BusinessException;
 import com.hechang.codeagent.exception.ErrorCode;
 import com.hechang.codeagent.model.dto.user.UserQueryRequest;
+import com.hechang.codeagent.model.entity.User;
+import com.hechang.codeagent.mapper.UserMapper;
 import com.hechang.codeagent.model.enums.UserRoleEnum;
 import com.hechang.codeagent.model.vo.LoginUserVO;
 import com.hechang.codeagent.model.vo.UserVO;
-import com.mybatisflex.core.paginate.Page;
-import com.mybatisflex.core.query.QueryWrapper;
-import com.mybatisflex.spring.service.impl.ServiceImpl;
-import com.hechang.codeagent.model.entity.User;
-import com.hechang.codeagent.mapper.UserMapper;
 import com.hechang.codeagent.service.UserService;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.util.DigestUtils;
 
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import static com.hechang.codeagent.constant.UserConstant.USER_LOGIN_STATE;
 
 /**
  * 用户 服务层实现。
  *
- * @author Chang
  */
 @Service
-public class UserServiceImpl extends ServiceImpl<UserMapper, User>  implements UserService{
+public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements UserService {
 
     @Override
     public long userRegister(String userAccount, String userPassword, String checkPassword) {
-        // 校验
-        if (StrUtil.hasBlank(userAccount, userPassword, checkPassword)){
+        // 1. 校验参数
+        if (StrUtil.hasBlank(userAccount, userPassword, checkPassword)) {
             throw new BusinessException(ErrorCode.PARAMS_ERROR, "参数为空");
         }
-        if (userAccount.length() < 4){
-            throw new BusinessException(ErrorCode.PARAMS_ERROR, "用户账号过短");
+        if (userAccount.length() < 4) {
+            throw new BusinessException(ErrorCode.PARAMS_ERROR, "账号长度过短");
         }
-        if (userPassword.length() < 8 || checkPassword.length() < 8){
-            throw new BusinessException(ErrorCode.PARAMS_ERROR, "用户密码过短");
+        if (userPassword.length() < 8 || checkPassword.length() < 8) {
+            throw new BusinessException(ErrorCode.PARAMS_ERROR, "密码长度过短");
         }
-        if (!userPassword.equals(checkPassword)){
+        if (!userPassword.equals(checkPassword)) {
             throw new BusinessException(ErrorCode.PARAMS_ERROR, "两次输入的密码不一致");
         }
-        // 检查账号是否重复
+        // 2. 查询用户是否已存在
         QueryWrapper queryWrapper = new QueryWrapper();
-        queryWrapper.eq(User::getUserAccount, userAccount);
-        // selectCountByQuery: 根据查询条件查询记录数
+        queryWrapper.eq("userAccount", userAccount);
         long count = this.mapper.selectCountByQuery(queryWrapper);
-        if (count > 0){
-            throw new BusinessException(ErrorCode.PARAMS_ERROR, "账号存在重复");
+        if (count > 0) {
+            throw new BusinessException(ErrorCode.PARAMS_ERROR, "账号重复");
         }
-        // 密码加密
+        // 3. 加密密码
         String encryptPassword = getEncryptPassword(userPassword);
-        // 插入数据
+        // 4. 创建用户，插入数据库
         User user = new User();
         user.setUserAccount(userAccount);
         user.setUserPassword(encryptPassword);
-        user.setUserName("佚名");
+        user.setUserName("无名");
         user.setUserRole(UserRoleEnum.USER.getValue());
         boolean saveResult = this.save(user);
-        if (!saveResult){
-            throw new BusinessException(ErrorCode.SYSTEM_ERROR, "注册失败,数据库出现错误");
+        if (!saveResult) {
+            throw new BusinessException(ErrorCode.OPERATION_ERROR, "注册失败，数据库错误");
         }
-
         return user.getId();
     }
 
     @Override
-    public String getEncryptPassword(String userPassword) {
-        //盐值，混淆密码
-        final String salt = "Chang";
-        //md5加密算法
-        return DigestUtils.md5DigestAsHex((salt + userPassword).getBytes());
-    }
-
-    @Override
     public LoginUserVO getLoginUserVO(User user) {
-        if (user == null){
+        if (user == null) {
             return null;
         }
         LoginUserVO loginUserVO = new LoginUserVO();
-        //将user对象中的信息存储到loginUserVO对象，（脱敏操作）
         BeanUtil.copyProperties(user, loginUserVO);
         return loginUserVO;
     }
 
     @Override
     public LoginUserVO userLogin(String userAccount, String userPassword, HttpServletRequest request) {
-        // 校验
-        if (StrUtil.hasBlank(userAccount, userPassword)){
+        // 1. 校验参数
+        if (StrUtil.hasBlank(userAccount, userPassword)) {
             throw new BusinessException(ErrorCode.PARAMS_ERROR, "参数为空");
         }
-        if (userAccount.length() < 4){
-            throw new BusinessException(ErrorCode.PARAMS_ERROR, "用户账号错误");
+        if (userAccount.length() < 4) {
+            throw new BusinessException(ErrorCode.PARAMS_ERROR, "账号长度过短");
         }
-        if (userPassword.length() < 8){
-            throw new BusinessException(ErrorCode.PARAMS_ERROR, "用户密码错误");
+        if (userPassword.length() < 8) {
+            throw new BusinessException(ErrorCode.PARAMS_ERROR, "密码长度过短");
         }
-        // 密码加密(因为存入数据库的密码是加密后的，所以查询用户信息时，也要对用户输入的密码进行同样的算法加密操作)
+        // 2. 加密
         String encryptPassword = getEncryptPassword(userPassword);
-        // 查询用户是否存在
+        // 3. 查询用户是否存在
         QueryWrapper queryWrapper = new QueryWrapper();
-        queryWrapper.eq(User::getUserAccount, userAccount);
-        queryWrapper.eq(User::getUserPassword, encryptPassword);
+        queryWrapper.eq("userAccount", userAccount);
+        queryWrapper.eq("userPassword", encryptPassword);
         User user = this.mapper.selectOneByQuery(queryWrapper);
-
-        // 用户不存在时
-        if (user == null){
+        if (user == null) {
             throw new BusinessException(ErrorCode.PARAMS_ERROR, "用户不存在或密码错误");
         }
-        // 记录用户登录态
-        request.getSession().setAttribute(UserConstant.USER_LOGIN_STATE, user);
-        // 获得脱敏后的用户信息
+        // 4. 如果用户存在，记录用户的登录态
+        request.getSession().setAttribute(USER_LOGIN_STATE, user);
+        // 5. 返回脱敏的用户信息
         return this.getLoginUserVO(user);
     }
 
     @Override
     public User getLoginUser(HttpServletRequest request) {
-        //先判断是否登录
-        User userObj = (User)request.getSession().getAttribute(UserConstant.USER_LOGIN_STATE);
-        if (userObj == null || userObj.getId() == null){
+        // 先判断用户是否登录
+        Object userObj = request.getSession().getAttribute(USER_LOGIN_STATE);
+        User currentUser = (User) userObj;
+        if (currentUser == null || currentUser.getId() == null) {
             throw new BusinessException(ErrorCode.NOT_LOGIN_ERROR);
         }
-        //从数据库查询最新的结果
-        Long userId = userObj.getId();
-        userObj = this.getById(userId);
-        if (userObj == null){
+        // 从数据库查询当前用户信息
+        long userId = currentUser.getId();
+        currentUser = this.getById(userId);
+        if (currentUser == null) {
             throw new BusinessException(ErrorCode.NOT_LOGIN_ERROR);
         }
-        return userObj;
-
-    }
-
-    @Override
-    public boolean userLogout(HttpServletRequest request) {
-        //先判断是否登录
-        User userObj = (User)request.getSession().getAttribute(UserConstant.USER_LOGIN_STATE);
-        if (userObj == null){
-            throw new BusinessException(ErrorCode.NOT_LOGIN_ERROR, "未登录");
-        }
-        //移除登录态
-        request.getSession().removeAttribute(UserConstant.USER_LOGIN_STATE);
-
-        return true;
+        return currentUser;
     }
 
     @Override
     public UserVO getUserVO(User user) {
-        if (user == null){
+        if (user == null) {
             return null;
         }
         UserVO userVO = new UserVO();
@@ -162,15 +136,29 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User>  implements U
 
     @Override
     public List<UserVO> getUserVOList(List<User> userList) {
-        if (CollUtil.isEmpty(userList)){
+        if (CollUtil.isEmpty(userList)) {
             return new ArrayList<>();
         }
-        return userList.stream().map(this::getUserVO).toList();
+        return userList.stream()
+                .map(this::getUserVO)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public boolean userLogout(HttpServletRequest request) {
+        // 先判断用户是否登录
+        Object userObj = request.getSession().getAttribute(USER_LOGIN_STATE);
+        if (userObj == null) {
+            throw new BusinessException(ErrorCode.OPERATION_ERROR, "用户未登录");
+        }
+        // 移除登录态
+        request.getSession().removeAttribute(USER_LOGIN_STATE);
+        return true;
     }
 
     @Override
     public QueryWrapper getQueryWrapper(UserQueryRequest userQueryRequest) {
-        if (userQueryRequest == null){
+        if (userQueryRequest == null) {
             throw new BusinessException(ErrorCode.PARAMS_ERROR, "请求参数为空");
         }
         Long id = userQueryRequest.getId();
@@ -180,32 +168,19 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User>  implements U
         String userRole = userQueryRequest.getUserRole();
         String sortField = userQueryRequest.getSortField();
         String sortOrder = userQueryRequest.getSortOrder();
-
         return QueryWrapper.create()
-                .eq(User::getId, id)
-                .eq(User::getUserRole, userRole)
-                .like(User::getUserAccount, userAccount)
-                .like(User::getUserName, userName)
-                .like(User::getUserProfile, userProfile)
+                .eq("id", id) // where id = ${id}
+                .eq("userRole", userRole) // and userRole = ${userRole}
+                .like("userAccount", userAccount)
+                .like("userName", userName)
+                .like("userProfile", userProfile)
                 .orderBy(sortField, "ascend".equals(sortOrder));
     }
 
     @Override
-    public Page<UserVO> listUserVO(UserQueryRequest userQueryRequest) {
-        //获取分页数据
-        int pageNum = userQueryRequest.getPageNum();
-        int pageSize = userQueryRequest.getPageSize();
-        //分页查询结果，对象是User，需要脱敏
-        Page<User> userPage = this.page(Page.of(pageNum, pageSize), this.getQueryWrapper(userQueryRequest));
-
-        //数据脱敏
-        Page<UserVO> userVOPage = new Page<>(pageNum, pageSize, userPage.getTotalRow());
-
-        List<UserVO> userVOList = this.getUserVOList(userPage.getRecords());
-        userVOPage.setRecords(userVOList);
-
-        return userVOPage;
+    public String getEncryptPassword(String userPassword) {
+        // 盐值，混淆密码
+        final String SALT = "chang";
+        return DigestUtils.md5DigestAsHex((userPassword + SALT).getBytes(StandardCharsets.UTF_8));
     }
-
-
 }
